--- a/index.html
+++ b/index.html
@@ -150,6 +150,61 @@
         .task.completed:hover {
             background-color: #32a852;
         }
+
+        .slot-machine {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .reel {
+            width: 60px;
+            height: 60px;
+            background-color: #0078d7;
+            border-radius: 12px;
+            margin: 0 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 24px;
+            color: white;
+        }
+
+        .reels-container {
+            display: flex;
+            margin-bottom: 20px;
+        }
+
+        .spin-button {
+            padding: 10px 20px;
+            background-color: #32a852;
+            color: white;
+            border: none;
+            border-radius: 12px;
+            cursor: pointer;
+            font-size: 18px;
+        }
+
+        .spin-button:disabled {
+            background-color: #bbb;
+            cursor: not-allowed;
+        }
+
+        .balance-display {
+            margin-bottom: 10px;
+            font-size: 18px;
+        }
+
+        .deposit-button {
+            padding: 10px 20px;
+            background-color: #0078d7;
+            color: white;
+            border: none;
+            border-radius: 12px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
     </style>
 </head>
 <body>
@@ -174,9 +229,14 @@
 
     <script>
         let coinCount = parseInt(localStorage.getItem('coins')) || 0;
+        let demoBalance = parseFloat(localStorage.getItem('demoBalance')) || 100; // 100 mBTC
 
         function updateCoinDisplay() {
             document.getElementById('coinCount').innerText = coinCount;
+        }
+
+        function updateDemoBalanceDisplay() {
+            document.getElementById('demoBalance').innerText = demoBalance.toFixed(2) + ' mBTC';
         }
 
         function showTab(tab, button) {
@@ -187,7 +247,19 @@
             button.classList.add('active');
 
             if (tab === 'warehouse') {
-                content.innerHTML = 'Warehouse: This will display your warehouse information.';
+                content.innerHTML = `
+                    <div class="slot-machine">
+                        <div class="balance-display">Balance: <span id="demoBalance">100.00 mBTC</span></div>
+                        <div class="reels-container">
+                            <div class="reel" id="reel1">🍒</div>
+                            <div class="reel" id="reel2">🍋</div>
+                            <div class="reel" id="reel3">🍉</div>
+                        </div>
+                        <button class="spin-button" onclick="spinReels()">Spin</button>
+                        <button class="deposit-button" onclick="depositTON()">Deposit via TON</button>
+                    </div>
+                `;
+                updateDemoBalanceDisplay();
             } else if (tab === 'tasks') {
                 content.innerHTML = `
                     <div class="task-container">
@@ -208,43 +280,66 @@
             }
         }
 
-        function jump() {
-            const gameBox = document.querySelector('.game-box');
-            gameBox.style.transform = 'translateY(-100px)';
-            setTimeout(() => {
-                gameBox.style.transform = 'translateY(0)';
-                document.getElementById('gameMessage').innerText = 'Great!';
-                addCoin();
-            }, 300);
-        }
+        function spinReels() {
+            if (demoBalance < 1) {
+                alert("Not enough balance to spin. Please deposit more mBTC.");
+                return;
+            }
 
-        function addCoin() {
-            coinCount++;
-            localStorage.setItem('coins', coinCount);
-            updateCoinDisplay();
-        }
+            demoBalance -= 1; // Cost of each spin is 1 mBTC
+            localStorage.setItem('demoBalance', demoBalance);
+            updateDemoBalanceDisplay();
 
-        function completeTask(taskId) {
-            const task = document.getElementById(taskId);
+            const symbols = ['🍒', '🍋', '🍉', '🍇', '🍓'];
+            const reel1 = symbols[Math.floor(Math.random() * symbols.length)];
+            const reel2 = symbols[Math.floor(Math.random() * symbols.length)];
+            const reel3 = symbols[Math.floor(Math.random() * symbols.length)];
 
-            if (!task.classList.contains('completed')) {
-                if (taskId === 'inviteFriendTask') {
-                    const telegramUrl = `https://t.me/share/url?url=${encodeURIComponent(window.location.href)}&text=Join%20me%20in%20this%20awesome%20game!`;
-                    window.open(telegramUrl, '_blank');
+            document.getElementById('reel1').innerText = reel1;
+            document.getElementById('reel2').innerText = reel2;
+            document.getElementById('reel3').innerText = reel3;
 
-                    coinCount += 5;
-                    localStorage.setItem('coins', coinCount);
-                    updateCoinDisplay();
-
-                    task.classList.add('completed');
-                    task.innerHTML = 'Task Completed! (+5 Coins)';
-                }
+            // Example: if all three reels match, give 10 mBTC
+            if (reel1 === reel2 && reel2 === reel3) {
+                demoBalance += 10;
+                alert("Congratulations! You won 10 mBTC!");
+                localStorage.setItem('demoBalance', demoBalance);
+                updateDemoBalanceDisplay();
             }
         }
 
-        // Initialize the default tab and coin display
-        showTab('warehouse', document.querySelector('.nav-button'));
+        function depositTON() {
+            // Simulate deposit using TON - This is just a placeholder for the actual integration
+            let depositAmount = prompt("Enter amount to deposit in mBTC:");
+            depositAmount = parseFloat(depositAmount);
+            if (!isNaN(depositAmount) && depositAmount > 0) {
+                demoBalance += depositAmount;
+                localStorage.setItem('demoBalance', demoBalance);
+                updateDemoBalanceDisplay();
+                alert(`Successfully deposited ${depositAmount} mBTC via TON.`);
+            } else {
+                alert("Invalid deposit amount.");
+            }
+        }
+
+        function completeTask(taskId) {
+            const taskElement = document.getElementById(taskId);
+            if (taskElement && !taskElement.classList.contains('completed')) {
+                coinCount += 5;
+                localStorage.setItem('coins', coinCount);
+                updateCoinDisplay();
+                taskElement.classList.add('completed');
+                taskElement.innerText = 'Task completed! Reward received.';
+            }
+        }
+
+        function jump() {
+            document.getElementById('gameMessage').innerText = 'Jumped!';
+        }
+
+        // Initialize the interface
         updateCoinDisplay();
+        showTab('warehouse', document.querySelector('.nav-button'));
     </script>
 </body>
 </html>
