--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Interface</title>
     <style>
+        /* Стили остаются без изменений, за исключением кнопки депозита */
         body {
             margin: 0;
             padding: 0;
@@ -195,6 +196,13 @@
             font-size: 18px;
         }
 
+        .deposit-container {
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
         .deposit-button {
             padding: 10px 20px;
             background-color: #0078d7;
@@ -203,6 +211,7 @@
             border-radius: 12px;
             cursor: pointer;
             font-size: 16px;
+            margin-top: 10px;
         }
 
     </style>
@@ -229,14 +238,14 @@
 
     <script>
         let coinCount = parseInt(localStorage.getItem('coins')) || 0;
-        let demoBalance = parseFloat(localStorage.getItem('demoBalance')) || 100; // 100 mBTC
+        let demoBalance = parseFloat(localStorage.getItem('demoBalance')) || 100; // 100 TON
 
         function updateCoinDisplay() {
             document.getElementById('coinCount').innerText = coinCount;
         }
 
         function updateDemoBalanceDisplay() {
-            document.getElementById('demoBalance').innerText = demoBalance.toFixed(2) + ' mBTC';
+            document.getElementById('demoBalance').innerText = demoBalance.toFixed(2) + ' TON';
         }
 
         function showTab(tab, button) {
@@ -249,14 +258,16 @@
             if (tab === 'warehouse') {
                 content.innerHTML = `
                     <div class="slot-machine">
-                        <div class="balance-display">Balance: <span id="demoBalance">100.00 mBTC</span></div>
+                        <div class="balance-display">Balance: <span id="demoBalance">100.00 TON</span></div>
                         <div class="reels-container">
                             <div class="reel" id="reel1">🍒</div>
                             <div class="reel" id="reel2">🍋</div>
                             <div class="reel" id="reel3">🍉</div>
                         </div>
                         <button class="spin-button" onclick="spinReels()">Spin</button>
-                        <button class="deposit-button" onclick="depositTON()">Deposit via TON</button>
+                        <div class="deposit-container">
+                            <button class="deposit-button" onclick="depositTON()">Deposit via TON</button>
+                        </div>
                     </div>
                 `;
                 updateDemoBalanceDisplay();
@@ -275,71 +286,67 @@
                         <div class="game-message" id="gameMessage">Tap the square to make it jump!</div>
                     </div>
                 `;
-            } else if (tab === 'market') {
-                content.innerHTML = 'Market: Coming Soon';
-            }
+        } else if (tab === 'market') {
+            content.innerHTML = 'Market is coming soon!';
         }
+    }
 
-        function spinReels() {
-            if (demoBalance < 1) {
-                alert("Not enough balance to spin. Please deposit more mBTC.");
-                return;
-            }
+    function spinReels() {
+        demoBalance -= 1; // Cost per spin
+        localStorage.setItem('demoBalance', demoBalance);
+        updateDemoBalanceDisplay();
 
-            demoBalance -= 1; // Cost of each spin is 1 mBTC
+        const symbols = ['🍒', '🍋', '🍉', '🍇', '🍊'];
+        const reel1 = symbols[Math.floor(Math.random() * symbols.length)];
+        const reel2 = symbols[Math.floor(Math.random() * symbols.length)];
+        const reel3 = symbols[Math.floor(Math.random() * symbols.length)];
+
+        document.getElementById('reel1').innerText = reel1;
+        document.getElementById('reel2').innerText = reel2;
+        document.getElementById('reel3').innerText = reel3;
+
+        if (reel1 === reel2 && reel2 === reel3) {
+            demoBalance += 10;
+            alert("Congratulations! You won 10 TON!");
             localStorage.setItem('demoBalance', demoBalance);
             updateDemoBalanceDisplay();
-
-            const symbols = ['🍒', '🍋', '🍉', '🍇', '🍓'];
-            const reel1 = symbols[Math.floor(Math.random() * symbols.length)];
-            const reel2 = symbols[Math.floor(Math.random() * symbols.length)];
-            const reel3 = symbols[Math.floor(Math.random() * symbols.length)];
-
-            document.getElementById('reel1').innerText = reel1;
-            document.getElementById('reel2').innerText = reel2;
-            document.getElementById('reel3').innerText = reel3;
-
-            // Example: if all three reels match, give 10 mBTC
-            if (reel1 === reel2 && reel2 === reel3) {
-                demoBalance += 10;
-                alert("Congratulations! You won 10 mBTC!");
-                localStorage.setItem('demoBalance', demoBalance);
-                updateDemoBalanceDisplay();
-            }
         }
+    }
 
-        function depositTON() {
-            // Simulate deposit using TON - This is just a placeholder for the actual integration
-            let depositAmount = prompt("Enter amount to deposit in mBTC:");
-            depositAmount = parseFloat(depositAmount);
-            if (!isNaN(depositAmount) && depositAmount > 0) {
-                demoBalance += depositAmount;
+    function depositTON() {
+        const depositAmount = prompt("Enter amount to deposit in TON:");
+        if (depositAmount !== null) {
+            const receiverAddress = prompt("Enter receiver wallet address (optional):");
+
+            if (!isNaN(parseFloat(depositAmount)) && parseFloat(depositAmount) > 0) {
+                // Here, you would normally generate a real payment invoice via TON API
+                // This example only updates the balance directly for simplicity
+                demoBalance += parseFloat(depositAmount);
                 localStorage.setItem('demoBalance', demoBalance);
                 updateDemoBalanceDisplay();
-                alert(`Successfully deposited ${depositAmount} mBTC via TON.`);
+                alert(`Successfully deposited ${depositAmount} TON. (Note: Real implementation requires TON API)`);
             } else {
                 alert("Invalid deposit amount.");
             }
         }
+    }
 
-        function completeTask(taskId) {
-            const taskElement = document.getElementById(taskId);
-            if (taskElement && !taskElement.classList.contains('completed')) {
-                coinCount += 5;
-                localStorage.setItem('coins', coinCount);
-                updateCoinDisplay();
-                taskElement.classList.add('completed');
-                taskElement.innerText = 'Task completed! Reward received.';
-            }
+    function completeTask(taskId) {
+        const taskElement = document.getElementById(taskId);
+        if (taskElement && !taskElement.classList.contains('completed')) {
+            coinCount += 5;
+            localStorage.setItem('coins', coinCount);
+            updateCoinDisplay();
+            taskElement.classList.add('completed');
+            taskElement.innerText = 'Task completed! Reward received.';
         }
+    }
 
-        function jump() {
-            document.getElementById('gameMessage').innerText = 'Jumped!';
-        }
+    function jump() {
+        document.getElementById('gameMessage').innerText = 'Jumped!';
+    }
 
-        // Initialize the interface
-        updateCoinDisplay();
-        showTab('warehouse', document.querySelector('.nav-button'));
-    </script>
-</body>
-</html>
+    // Initialize the interface
+    updateCoinDisplay();
+    showTab('warehouse', document.querySelector('.nav-button'));
+</script>
